deploy: 48809025b99eb5a63a0ecca009344f202660a808

--- a/genindex.html
+++ b/genindex.html
@@ -34,8 +34,281 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.acos">acos() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.acosh">acosh() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.asin">asin() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.asinh">asinh() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.atan">atan() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.atan2">atan2() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.atanh">atanh() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.cbrt">cbrt() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.ceil">ceil() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.comb">comb() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.copysign">copysign() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.cos">cos() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.cosh">cosh() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.degrees">degrees() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.dist">dist() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.erf">erf() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.erfc">erfc() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.exp">exp() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.exp2">exp2() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.expm1">expm1() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.fabs">fabs() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.factorial">factorial() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.floor">floor() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.fmod">fmod() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.frexp">frexp() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.fsum">fsum() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.gamma">gamma() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.gcd">gcd() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.hypot">hypot() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.isclose">isclose() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.isfinite">isfinite() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.isinf">isinf() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.isnan">isnan() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.isqrt">isqrt() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.lcm">lcm() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.ldexp">ldexp() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.lgamma">lgamma() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.log">log() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.log10">log10() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.log1p">log1p() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.log2">log2() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    math
+
+      <ul>
+        <li><a href="game_qu.math.html#module-math">module</a>
+</li>
+      </ul></li>
+      <li><a href="game_qu.math.html#math.modf">modf() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="game_qu.math.html#module-math">math</a>
+</li>
+        <li><a href="game_qu.html#module-test">test</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.nextafter">nextafter() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.perm">perm() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.pow">pow() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.prod">prod() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.radians">radians() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.remainder">remainder() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.sin">sin() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.sinh">sinh() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.sqrt">sqrt() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.sumprod">sumprod() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.tan">tan() (in module math)</a>
+</li>
+      <li><a href="game_qu.math.html#math.tanh">tanh() (in module math)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    test
+
+      <ul>
+        <li><a href="game_qu.html#module-test">module</a>
+</li>
+      </ul></li>
+      <li><a href="game_qu.math.html#math.trunc">trunc() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="game_qu.math.html#math.ulp">ulp() (in module math)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
           </div>
